Add introductory text

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+  <title>Serena Hathi</title>
+  <link rel="stylesheet" href="/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+
+</head>
+
+<body>
+  <h1>Hi! I'm Serena a full-stack developer from London</h1>
+		<div class="icons">
+      <a target="_blank" href="https://www.linkedin.com/in/serenahathi/"><i class="fab fa-linkedin"></i></a>
+			<a target="_blank" href="https://github.com/serenahathi"><i class="fab fa-github-square"></i></a>
+			<a target="_blank" href="https://twitter.com/attr_reader"><i class="fab fa-twitter"></i></a>
+      <a target="_blank" href="mailto:hathiserena@gmail.com"><i class="fas fa-envelope"></i></a>
+      
+    </div>
+</body>
+</html>
