--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-  <title>Serena Hathi</title>
-  <link rel="stylesheet" href="/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <head>
+    <title>Serena Hathi</title>
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100|Pacifico" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="../personal-site.io/public/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 
-</head>
-
-<body>
-  <h1>Hi! I'm Serena a full-stack developer from London</h1>
-		<div class="icons">
-      <a target="_blank" href="https://www.linkedin.com/in/serenahathi/"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://github.com/serenahathi"><i class="fab fa-github-square"></i></a>
-			<a target="_blank" href="https://twitter.com/attr_reader"><i class="fab fa-twitter"></i></a>
-      <a target="_blank" href="mailto:hathiserena@gmail.com"><i class="fas fa-envelope"></i></a>
-      
+  <body>
+    <div class="background-image w3-display-container w3-opacity-min" id="home">
+      <div class="w3-display-middle" style="white-space:nowrap;">
+        <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">SERENA HATHI  </span>
+        <div class="icons w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
+        <a id="button" target="_blank" href="https://github.com/serenahathi"><i class="fa fa-github w3-hover-opacity"></i></a>
+        <a id="button" target="_blank" href="https://www.linkedin.com/in/serenahathi/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+        <a id="button" target="_blank" href="https://www.twitter.com/attr_reader/"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+        <a id="button" target="_blank" href="mailto:hathiserena@gmail.com"><i class="fa fa-envelope w3-hover-opacity"></i></a>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
