Add description metatag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </script>
     <title>Serena Hathi</title>
     <meta charset="UTF-8">
+    <meta name="description" content="Serena Hathi | Software Engineer | London and Berlin">
     <link rel="preload" href="public/images/background-compressed.jpg" as="image">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100|Pacifico" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
